Ci (#1)
Add CI Pipeline.